--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: k8s-app
-        image: "devopshint/nodejsapp-1.0:latest"
+        image: "rajaninandu/hello-world-0.2-snapshot"
         ports:
           - containerPort: 3000
 ---
