--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: k8s-app-a
-        image: "rajaninandu/k8s-img"
+        image: "rushmitha27/hello-world"
         ports:
           - containerPort: 3000
 ---
